--- a/Project1/First Project Work Week Assignment.ipynb
+++ b/Project1/First Project Work Week Assignment.ipynb
@@ -306,8 +306,7 @@
    "source": [
     "#import the data\n",
     "import pandas as pd\n",
-    "df = pd.read_csv('Input/DefaultCreditcardClients.csv')\n",
-    "df.head()"
+    "df = pd.read_csv('Input/DefaultCreditcardClients.csv')"
    ]
   },
   {
@@ -367,47 +366,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 30000 entries, 0 to 29999\n",
-      "Data columns (total 25 columns):\n",
-      "ID                            30000 non-null int64\n",
-      "LIMIT_BAL                     30000 non-null float64\n",
-      "SEX                           30000 non-null int64\n",
-      "EDUCATION                     30000 non-null int64\n",
-      "MARRIAGE                      30000 non-null int64\n",
-      "AGE                           30000 non-null int64\n",
-      "PAY_0                         30000 non-null int64\n",
-      "PAY_2                         30000 non-null int64\n",
-      "PAY_3                         30000 non-null int64\n",
-      "PAY_4                         30000 non-null int64\n",
-      "PAY_5                         30000 non-null int64\n",
-      "PAY_6                         30000 non-null int64\n",
-      "BILL_AMT1                     30000 non-null float64\n",
-      "BILL_AMT2                     30000 non-null float64\n",
-      "BILL_AMT3                     30000 non-null float64\n",
-      "BILL_AMT4                     30000 non-null float64\n",
-      "BILL_AMT5                     30000 non-null float64\n",
-      "BILL_AMT6                     30000 non-null float64\n",
-      "PAY_AMT1                      30000 non-null float64\n",
-      "PAY_AMT2                      30000 non-null float64\n",
-      "PAY_AMT3                      30000 non-null float64\n",
-      "PAY_AMT4                      30000 non-null float64\n",
-      "PAY_AMT5                      30000 non-null float64\n",
-      "PAY_AMT6                      30000 non-null float64\n",
-      "default payment next month    30000 non-null int64\n",
-      "dtypes: float64(13), int64(12)\n",
-      "memory usage: 5.7 MB\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -610,7 +573,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +586,6 @@
     "                       'BILL_AMT4', 'BILL_AMT5', 'BILL_AMT6', 'PAY_AMT1',\n",
     "                       'PAY_AMT2', 'PAY_AMT3', 'PAY_AMT4', 'PAY_AMT5',\n",
     "                       'PAY_AMT6']\n",
-    "\n",
     "#Oridnals\n",
     "#ordinal_features = ['EDUCATION', 'MARRIAGE', 'AGE', 'PAY_0','PAY_2', 'PAY_3', 'PAY_4', 'PAY_5', 'PAY_6']\n",
     "\n",
@@ -634,14 +596,13 @@
     "df[continuous_features] = df[continuous_features].astype(np.float64)\n",
     "#df[ordinal_features] = df[ordinal_features].astype(np.int64)\n",
     "\n",
-    "df.info()\n",
     "df.describe()\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +901,7 @@
        "[8 rows x 25 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
