--- a/Project1/First Project Work Week Assignment.ipynb
+++ b/Project1/First Project Work Week Assignment.ipynb
@@ -14,7 +14,9 @@
    "source": [
     "### Business Understanding\n",
     "\n",
+    "<font color='blue'>\n",
     "_Describe the purpose of the data set you selected (i.e., why was this data collected in the first place?). Describe how you would define and measure the outcomes from the dataset. That is, why is this data important and how do you know if you have mined useful knowledge from the dataset? How would you measure the effectiveness of a good prediction algorithm? Be specific._\n",
+    "</font>\n",
     "\n",
     "__Goal__\n",
     "\n",
@@ -35,7 +37,9 @@
    "source": [
     "### Data Meaning Type\n",
     "\n",
+    "<font color='blue'>\n",
     "_Describe the meaning and type of data (scale, values, etc.) for each attribute in the data file._\n",
+    "</font>\n",
     "\n",
     "#### Attribute Information\n",
     "\n",
@@ -99,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +137,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -192,7 +196,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,12 +222,15 @@
    "source": [
     "### Data Quality\n",
     "\n",
-    "_Verify data quality: Explain any missing values, duplicate data, and outliers. Are those mistakes? How do you deal with these problems? Give justifications for your methods._\n"
+    "<font color='blue'>\n",
+    "_Verify data quality: Explain any missing values, duplicate data, and outliers. Are those mistakes? How do you deal with these problems? Give justifications for your methods._\n",
+    "\n",
+    "</font>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +255,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pandas.plotting import scatter_matrix\n",
+    "\n",
+    "#dfcont=(df.BILL_AMT1,df.BILL_AMT2)\n",
+    "#ax = scatter_matrix(df,figsize=(15, 10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -275,12 +294,14 @@
    "source": [
     "### Simple Statistics\n",
     "\n",
-    "_Visualize appropriate statistics (e.g., range, mode, mean, median, variance, counts) for a subset of attributes. Describe anything meaningful you found from this or if you found something potentially interesting. Note: You can also use data from other sources for comparison. Explain why the statistics run are meaningful. _"
+    "<font color='blue'>\n",
+    "_Visualize appropriate statistics (e.g., range, mode, mean, median, variance, counts) for a subset of attributes. Describe anything meaningful you found from this or if you found something potentially interesting. Note: You can also use data from other sources for comparison. Explain why the statistics run are meaningful._\n",
+    "</font>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +600,7 @@
        "[8 rows x 25 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,43 +616,9 @@
    "source": [
     "### Visualize Attributes\n",
     "\n",
-    "_Visualize the most interesting attributes (at least 5 attributes, your opinion on what is interesting). Important: Interpret the implications for each visualization. Explain for each attribute why the chosen visualization is appropriate._\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#python code"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Explore Joint Attributes\n",
-    "\n",
-    "_Visualize relationships between attributes: Look at the attributes via scatter plots, correlation, cross-tabulation, group-wise averages, etc. as appropriate. Explain any interesting relationships._\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#python code"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Explore Attributes and Class\n",
-    "\n",
-    "_Identify and explain interesting relationships between features and the class you are trying to predict (i.e., relationships with variables and the target classification)._\n"
+    "<font color='blue'>\n",
+    "_Visualize the most interesting attributes (at least 5 attributes, your opinion on what is interesting). Important: Interpret the implications for each visualization. Explain for each attribute why the chosen visualization is appropriate._\n",
+    "</font>"
    ]
   },
   {
@@ -647,9 +634,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### New Features\n",
+    "### Explore Joint Attributes\n",
     "\n",
-    "_Are there other features that could be added to the data or created from existing features? Which ones?_\n"
+    "<font color='blue'>\n",
+    "_Visualize relationships between attributes: Look at the attributes via scatter plots, correlation, cross-tabulation, group-wise averages, etc. as appropriate. Explain any interesting relationships._\n",
+    "</font>\n"
    ]
   },
   {
@@ -665,14 +654,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exceptional Work\n",
+    "### Explore Attributes and Class\n",
     "\n",
-    "_You have free reign to provide additional analyses. One idea: implement dimensionality reduction, then visualize and interpret the results._\n"
+    "<font color='blue'>\n",
+    "_Identify and explain interesting relationships between features and the class you are trying to predict (i.e., relationships with variables and the target classification)._\n",
+    "</font>\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#python code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### New Features\n",
+    "\n",
+    "<font color='blue'>\n",
+    "_Are there other features that could be added to the data or created from existing features? Which ones?_\n",
+    "</font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#python code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exceptional Work\n",
+    "\n",
+    "<font color='blue'>\n",
+    "_You have free reign to provide additional analyses. One idea: implement dimensionality reduction, then visualize and interpret the results._\n",
+    "</font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,8 +723,14 @@
    "source": [
     "#### Jupyter Formatting Cheatsheet\n",
     "https://medium.com/ibm-data-science-experience/markdown-for-jupyter-notebooks-cheatsheet-386c05aeebed\n",
-    "    \n",
-    "__Copied from Syllabus__  \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color='blue'> \n",
     "You are to perform analysis of a data set: exploring the statistical summaries of the features,\n",
     "visualizing the attributes, and making conclusions from the visualizations and analysis. Follow the\n",
     "CRISP-DM framework in your analysis (you are not performing all of the CRISP-DM outline, only\n",
@@ -706,7 +743,30 @@
     "largest share of the points is from how you interpret the visuals that you make. Making the visuals\n",
     "is not enough to satisfy each of the rubrics below—you should appropriately explain what the\n",
     "implications of the visualizations are. In other words, expect about 20% of the available points for\n",
-    "visuals that have no substantive discussion."
+    "visuals that have no substantive discussion.\n",
+    "</font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function vectorize.<locals>.wrap at 0x000001F7C88FFF28>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numba.cuda\n",
+    "import numpy as np\n",
+    "import math\n",
+    "\n",
+    "my_gpu = numba.vectorize(df.AGE)\n",
+    "print (my_gpu)"
    ]
   },
   {
