--- a/Project1/First Project Work Week Assignment.ipynb
+++ b/Project1/First Project Work Week Assignment.ipynb
@@ -230,8 +230,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
