Added data for Nate so reltive path works

--- a/Project1/Dan/First Project Work Week Assignment.ipynb
+++ b/Project1/Dan/First Project Work Week Assignment.ipynb
@@ -1156,10 +1156,10 @@
     "#Transpose so sample in rows rather than columns so we use .T to transpose\n",
     "scaled_data = preprocessing.scale(df_pca.T)\n",
     "\n",
-    "#create PCA\n",
+    "#create a PCA object\n",
     "pca=PCA()\n",
     "\n",
-    "#\n",
+    "#All PCA math in here, loading scores and variation each component accounts for\n",
     "\n",
     "\n",
     "\n",
