--- a/Project1/FinalDraft.ipynb
+++ b/Project1/FinalDraft.ipynb
@@ -356,6 +356,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The table above shows a peek at the first 5 records in the dataset."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -405,8 +412,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pandas defaulted all data types to integer.\n",
-    "The source has no explicit data type descriptions but there is enough context to safely change the datatypes of all continuous variables to floats."
+    "Pandas defaulted all data types to integer. The source has no explicit data type descriptions but there is enough context to safely change the datatypes of all continuous variables to floats."
    ]
   },
   {
@@ -478,7 +484,7 @@
    "source": [
     "## Data Quality\n",
     "\n",
-    "#### No values coded as missing, or empty cells in the CSV file provided.\n",
+    "There were no missing values identified how\n",
     "\n",
     "#### Field definitions and naming:\n",
     "1.  The naming convention of the Payment, Bill and Payment Status fields are that the calendar month of the attribute is given by sequential integers at the end of the name. The PAY_N fields go from PAY_0 to PAY_2.  We are assuming that PAY_0 is really PAY_1.\n",
