--- a/Project1/Paul/MiniProject Paul 1.ipynb
+++ b/Project1/Paul/MiniProject Paul 1.ipynb
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -357,7 +357,7 @@
        "9        2977"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -434,7 +434,7 @@
        "Train  23994"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,19 +452,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Creating a df with just the Training obs.\n",
-    "traindf = df[df.Set == 'Train'] ## surveys_df[surveys_df.year == 2002]"
+    "traindf = df[df.Set == 'Train']\n",
+    "testdf = df[df.Set == 'Test']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -765,7 +766,7 @@
        "[8 rows x 27 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -827,6 +828,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 6006 entries, 4 to 29998\n",
+      "Data columns (total 28 columns):\n",
+      "LIMIT_BAL      6006 non-null int64\n",
+      "SEX            6006 non-null int64\n",
+      "EDUCATION      6006 non-null int64\n",
+      "MARRIAGE       6006 non-null int64\n",
+      "AGE            6006 non-null int64\n",
+      "PAY_0          6006 non-null int64\n",
+      "PAY_2          6006 non-null int64\n",
+      "PAY_3          6006 non-null int64\n",
+      "PAY_4          6006 non-null int64\n",
+      "PAY_5          6006 non-null int64\n",
+      "PAY_6          6006 non-null int64\n",
+      "BILL_AMT1      6006 non-null int64\n",
+      "BILL_AMT2      6006 non-null int64\n",
+      "BILL_AMT3      6006 non-null int64\n",
+      "BILL_AMT4      6006 non-null int64\n",
+      "BILL_AMT5      6006 non-null int64\n",
+      "BILL_AMT6      6006 non-null int64\n",
+      "PAY_AMT1       6006 non-null int64\n",
+      "PAY_AMT2       6006 non-null int64\n",
+      "PAY_AMT3       6006 non-null int64\n",
+      "PAY_AMT4       6006 non-null int64\n",
+      "PAY_AMT5       6006 non-null int64\n",
+      "PAY_AMT6       6006 non-null int64\n",
+      "default        6006 non-null int64\n",
+      "Unnamed: 25    0 non-null float64\n",
+      "Unnamed: 26    0 non-null float64\n",
+      "RandNum        6006 non-null int32\n",
+      "Set            6006 non-null object\n",
+      "dtypes: float64(2), int32(1), int64(24), object(1)\n",
+      "memory usage: 1.3+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "testdf.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -840,18 +892,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
   }
  },
  "nbformat": 4,
