--- a/Lab 3/Deliverable_Properties_Analysis.ipynb
+++ b/Lab 3/Deliverable_Properties_Analysis.ipynb
@@ -143,9 +143,9 @@
    ],
    "source": [
     "#Residential Data\n",
-    "import os\n",
-    "path=\"C:/Users/danie/Documents/GitHub/DataMiningGroupProjects/Lab 3\"\n",
-    "os.chdir(path)\n",
+    "# import os\n",
+    "# path=\"C:/Users/danie/Documents/GitHub/DataMiningGroupProjects/Lab 3\"\n",
+    "# os.chdir(path)\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "df1 = pd.read_csv('Data/raw_residential_data.csv',low_memory=False)\n",
@@ -799,7 +799,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x15f0e413e48>"
+       "<seaborn.axisgrid.PairGrid at 0x2d0835c56a0>"
       ]
      },
      "execution_count": 8,
@@ -833,7 +833,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x15f08e8ae10>"
+       "<seaborn.axisgrid.PairGrid at 0x2d080627d30>"
       ]
      },
      "execution_count": 9,
