--- a/Lab 3/Deliverable_Properties_Analysis.ipynb
+++ b/Lab 3/Deliverable_Properties_Analysis.ipynb
@@ -636,7 +636,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now have 31 attributes but have several with null values. For each of them with 100 or fewer nulls we will impute the missing values using the most common class or median value. However, the year remodeled, & price stand out and will probably need to be treated differently.\n",
+    "We now have 31 attributes but several have null values. For each of them with 100 or fewer nulls we will impute the missing values using the most common class or median value. However, the year remodeled, & price stand out and will probably need to be treated differently.\n",
     "\n",
     "For the year remodeled we will assume that variable is missing when no remodels have been done to the home. Thus, converting the year to bins and treating the 57k with no remodel year as there own class. Clusters with a high proportion of these class homes may provide insights into homes for contractors to target.\n",
     "\n",
@@ -1081,7 +1081,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now have a cleaned up set of 22 different features for over 107k homes with all the missing values imputed. Before we begin analysis and clustering of our data we will explore these variables a little further to understand any transformations that may be required or any outliers that need to be addressed.\n",
+    "We now have a cleaned up set of 22 different attributes of over 107k homes with all the missing values imputed. Before we begin analysis and clustering of our data we will explore these attributes a little further to understand any transformations that may be required or any outliers that need to be addressed.\n",
     "***  \n",
     "\n",
     "##### Additional Outliers to be Addressed  \n",
@@ -1153,7 +1153,7 @@
    "source": [
     "***\n",
     "__Year Built (AYB) < 1500__  \n",
-    "While it may be possible from some homes to be originally built prior to 1900, these earlier homes represent a very small proportion of our data. The majority of them have years reported as 50 or below. In order to help secure overall data quality we will remove those observations from our data."
+    "While it may be possible from some homes to be originally built prior to 1900, these earlier homes represent a very small proportion of our data. The majority of them have years reported as 50 or below. We will remove those observations from our data."
    ]
   },
   {
@@ -1428,16 +1428,16 @@
    "source": [
     "***\n",
     "## Data Understanding 2\n",
-    "<font color=blue>Visualize the any important attributes appropriately. Important: Provide an interpretation for any charts or graphs.</font>\n",
-    "\n",
-    "Let explore our data a little further to better understand the features that may be of importance for our analysis. First we will try to understand some of the different Wards in our data."
+    "<font color=blue>Visualize the any important attributes appropriately. Important: Provide an interpretation for any charts or graphs.</font>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to help the client understand the how the home types for the various neighborhoods or wards relate we have to join with data collected through a different source to get distinct location information related to these addresses. However, not all address information is available for all the homes in our set so for the purposes of this we will only consider homes which we have neighborhood information available."
+    "To help clients understand home types in various wards we have to join the 2 datasets.This gives discrete lattitude/longitude location by address. \n",
+    "\n",
+    "Not all address information is available for all the homes; for the purposes of this analysis we will only consider homes which we have neighborhood information available."
    ]
   },
   {
@@ -1490,6 +1490,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below we can see number of homes by ward. Ward 4 having the most and ward 2 the least."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
@@ -1524,6 +1531,14 @@
     "# add labels\n",
     "plt.xticks(indexes + bar_width, labels)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below we can see geo location by year built by ward.\n",
+    "This tells us that wards 2 and 6 have the more historic residences while ward 7 looks to be the most modern."
    ]
   },
   {
@@ -1615,7 +1630,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://plot.ly/~otanyuk/0"
+    "__Realtime interactive rd scatter plot__  https://plot.ly/~otanyuk/0\n",
+    "\n"
    ]
   },
   {
