--- a/Lab 3/Deliverable_Properties_Analysis.ipynb
+++ b/Lab 3/Deliverable_Properties_Analysis.ipynb
@@ -1252,7 +1252,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x22905fe7630>"
+       "<seaborn.axisgrid.PairGrid at 0x1da03557128>"
       ]
      },
      "execution_count": 9,
@@ -1279,6 +1279,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below we remove outliers and replot to see some improvement in the colinearity and distributions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
@@ -1296,7 +1303,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x22902606208>"
+       "<seaborn.axisgrid.PairGrid at 0x1da00771710>"
       ]
      },
      "execution_count": 10,
@@ -1435,14 +1442,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To help clients understand home types in various wards we have to join the 2 datasets.This gives discrete lattitude/longitude location by address. \n",
+    "To help clients understand home types in various wards we have to join the 2 datasets. This gives discrete lattitude/longitude location with addresses and other attributes combined. \n",
     "\n",
     "Not all address information is available for all the homes; for the purposes of this analysis we will only consider homes which we have neighborhood information available."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -1455,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -1466,7 +1473,7 @@
        "(Text(0.5,0,'Latitude'), Text(0,0.5,'Longitude'))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1498,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -1538,7 +1545,7 @@
    "metadata": {},
    "source": [
     "Below we can see geo location by year built by ward.\n",
-    "This tells us that wards 2 and 6 have the more historic residences while ward 7 looks to be the most modern."
+    "This tells us that wards 2 and 6 have the more historic residences while ward 7 looks to be more modern."
    ]
   },
   {
@@ -1630,7 +1637,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Realtime interactive 3d scatter plot__  https://plot.ly/~otanyuk/0  \n",
+    "__Realtime interactive 3d scatter plot:__  https://plot.ly/~otanyuk/0  \n",
     "\n",
     "__Offline Top Down:__"
    ]
@@ -1712,9 +1719,7 @@
    "metadata": {},
    "source": [
     "___\"we can cluster first and then perform principal components analysis\"__\n",
-    "__\"Rather than KNN on entire dataset we can we can cluster first and then KNN to reduce the number of comparisons we need to do\"__\n",
-    "\n",
-    "Data Preparation"
+    "__\"Rather than KNN on entire dataset we can we can cluster first and then KNN to reduce the number of comparisons we need to do\"__"
    ]
   },
   {
@@ -1946,6 +1951,13 @@
     "df_temp = (df_imputed-df_imputed.mean())/df_imputed.std()\n",
     "df_final = pd.concat([df_temp, df.ASSESSMENT_NBHD], axis=1)\n",
     "df_final.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Initial Model"
    ]
   },
   {
